Client metadata log message verbosity is not parallel with connection start/end messages

XMLWordPrintableJSON

    • Service Arch
    • Minor Change
    • ALL
    • v8.0, v7.3
    • Service Arch 2024-05-13
    • 146
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      One of the main behaviors of the --quiet command line switch is to suppress the "connection received" and "end connection" log messages. However, the new "received client metadata from" log message does not adhere to the --quiet switch. This means that users that used to be able to suppress a high volume of log messages from incoming connections no longer can do so.
      We should either make --quiet not suppress all "connection" related messages, or we should make the "client metadata" messages be suppressed by --quiet.

            Assignee:
            Ronald Steinke (Inactive)
            Reporter:
            Eric Milkie
            Votes:
            7 Vote for this issue
            Watchers:
            17 Start watching this issue

              Created:
              Updated:
              Resolved: