SERVER-29109 avoid logging client metadata when --quiet